@@ -1,5 +1,5 @@
 /*
- * Copyright 2018-2021 the original author or authors.
+ * Copyright 2018-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -126,7 +126,7 @@ class EnableRabbitKotlinTests {
 	open class Multi {
 
 		@RabbitHandler
-		fun handle(@Suppress("UNUSED_PARAMETER") data: String) {
+		suspend fun handle(@Suppress("UNUSED_PARAMETER") data: String) {
 			throw RuntimeException("fail")
 		}
 
